--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-minimal
 
 title: Cecilia's homepage
 description: online hub of the things I have done 
-logo: https://github.com/cryptoceci/cryptoceci.github.io/blob/main/gitpic.jpg
+logo: gitpic.jpg
