--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-minimal
 
 title: Cecilia's homepage
+hometitle: The Axolotl lair
 description: online hub of the things I have done 
 logo: gitpic.jpg
