--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ theme: jekyll-theme-minimal
 
 title: Cecilia's homepage
 hometitle: The Axolotl lair
-description: online hub of the things I have done 
+description: a collection of peculiar things
 logo: gitpic.jpg
