--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 
 title: Cecilia's homepage
-hometitle: The Axolotl lair
+hometitle: Cecilia's Crypto
 description: a collection of peculiar things
 logo: gitpic.jpg
