--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ theme: jekyll-theme-minimal
 title: Cecilia's homepage
 hometitle: Cecilia's Crypto
 description: a collection of peculiar things
-logo: gitpic.jpg
+logo: profile-pic.jpg
